use clear:both instead of overflow:auto to prevent hiding dropdowns, etc
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@14392 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/assets/css/wdkCommon.css
+++ b/View/assets/css/wdkCommon.css
@@ -597,7 +597,7 @@ ul.menubar {
 }
 
 .param-item {
-  overflow: auto;
+  clear: both;
   padding-top: 5px;
   padding-bottom: 5px;
 }
